# oc-builds.github.io

./: .gitignore  PUBLISHING.md  README.md  artifact-algorithms.html  artifact-databases.html  artifact-software-design.html  code-review.html  index.html  index.md  outcomes.html  styles.css
artifacts/01_software_design/enhanced_web_app/: .gitignore  README.md
artifacts/01_software_design/enhanced_web_app/client/: index.html  package-lock.json  package.json  vite.config.js
artifacts/01_software_design/enhanced_web_app/server/: .env.example  .gitignore  db.js  eslint.config.js  index.js  package-lock.json  (+3 more)
artifacts/02_algorithms/enhanced_avl_advisor/: ABCU_Advising_Program_Input_BadCycle.csv  ABCU_Advising_Program_Input_MissingPrereq.csv  ABCU_Advising_Program_Input_Sorted.csv  AVLTree.cpp  AVLTree.h  Course.h  CsvLoader.cpp  CsvLoader.h  Makefile  PrereqGraph.cpp  PrereqGraph.h  README.md  main.cpp
artifacts/02_algorithms/original_bst_advisor/: ProjectTwo.cpp
artifacts/03_databases/enhanced_shelter_service/: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
artifacts/03_databases/enhanced_shelter_service/app/: __init__.py  audit.py  auth.py  config.py  crud.py  db.py  db_provider.py  main.py  models.py  routes_animals.py  routes_auth.py
artifacts/03_databases/enhanced_shelter_service/scripts/: audit_watcher.py  db_setup.py  migrate_geojson.py  seed.py
artifacts/03_databases/enhanced_shelter_service/tests/: conftest.py  test_audit_watcher.py  test_crud_shape.py  test_db_provider.py  test_routes.py  test_specs.py
(+43 files in other folders)
