[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs340-enhanced-shelter"
version = "0.1.0"
description = "CS499 Enhancement Three rebuild of the CS340 Austin Animal Center project"
requires-python = ">=3.10"
authors = [{ name = "Sanjay Chauhan" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pymongo>=4.6,<5",
    "pydantic>=2.5",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=3.2,<5",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "mongomock>=4.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
